right aligned dropdown menu fix

--- a/css/base.css
+++ b/css/base.css
@@ -6496,7 +6496,7 @@ a.fbtn:focus, a.fbtn:hover {
     -webkit-transform: scale(1, 1);
     -ms-transform: scale(1, 1);
     transform: scale(1, 1); }
-  .dropdown-menu.dropdown-menu-right, .nav.pull-right .dropdown-menu {
+  .dropdown-menu.dropdown-menu-right, .dropdown.pull-right .dropdown-menu, .nav.pull-right .dropdown-menu {
     border-radius: 2px 0 2px 2px;
     right: 0;
     left: auto;
@@ -6570,6 +6570,9 @@ a.fbtn:focus, a.fbtn:hover {
     -webkit-transform: scale(1, 0);
     -ms-transform: scale(1, 0);
     transform: scale(1, 0); }
+    .dropdown-toggle-btn ~ .dropdown-menu.dropdown-menu-right, .dropdown.pull-right .dropdown-toggle-btn ~ .dropdown-menu, .nav.pull-right .dropdown-toggle-btn ~ .dropdown-menu {
+      right: -1px;
+      left: auto; }
 
 .form {
   margin-top: 24px;
